# blogpostUpdater

./: README.md  pyproject.toml
blogupdater/: blogUpdate.py
